--- a/1-base/cash-flow/package.json
+++ b/1-base/cash-flow/package.json
@@ -1,10 +1,10 @@
 {
   "name": "cash-flow",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --aot -o",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
