--- a/0-hello/cash-flow/package.json
+++ b/0-hello/cash-flow/package.json
@@ -1,10 +1,12 @@
 {
   "name": "cash-flow",
-  "version": "0.0.0",
+  "version": "5.0.0",
+  "description": "Hola Angular CLI",
+  "homepage": "http://academia-binaria.com/hola-angular-cli/",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --aot -o",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -22,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
+    "milligram": "^1.3.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
