--- a/0-hello/cash-flow/package.json
+++ b/0-hello/cash-flow/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
     "milligram": "^1.3.0",
+    "moment": "^2.19.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
