--- a/1-base/cash-flow/package.json
+++ b/1-base/cash-flow/package.json
@@ -1,6 +1,12 @@
 {
   "name": "cash-flow",
-  "version": "1.0.0",
+  "version": "5.1.0",
+  "description": "Base para una aplicación Angular",
+  "homepage": "http://academia-binaria.com/base-aplicacion-angular/",
+  "author": {
+    "name": "Alberto Basalo",
+    "url": "https://twitter.com/albertobasalo"
+  },
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -23,6 +29,7 @@
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
     "milligram": "^1.3.0",
+    "moment": "^2.19.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
